Fix : Preprocessing 수정

--- a/Steam/Steam_preprocessing.ipynb
+++ b/Steam/Steam_preprocessing.ipynb
@@ -12,6 +12,7 @@
     "import random\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
+    "import pickle\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -329,6 +330,212 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_steam = recomd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_steam['interaction'] = df_steam['is_recommended'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_steam['interaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define unique function\n",
+    "def _unique(sample, fname):\n",
+    "    tmp_df = pd.DataFrame()\n",
+    "    tmp_df[fname] = sample[fname].unique()\n",
+    "    num = len(tmp_df)\n",
+    "    tmp_df['tmp_feature'] = range(num)\n",
+    "    sample = sample.join(tmp_df.set_index(fname), on=fname)\n",
+    "    sample.drop(fname, axis=1, inplace=True)\n",
+    "    sample = sample.rename(columns = {\"tmp_feature\": fname})\n",
+    "    return num, sample\n",
+    "\n",
+    "num_user, df_steam = _unique(df_steam, 'user_id')\n",
+    "num_app, df_steam = _unique(df_steam, 'app_id')\n",
+    "\n",
+    "description = [\n",
+    "    ('user_id', num_user, 'spr'),  # 변환된 유저 ID\n",
+    "    ('app_id', num_app, 'spr'),  # 변환된 게임(아이템) ID\n",
+    "    ('date', -1, 'ctn'),  # 정규화된 날짜\n",
+    "    ('interaction', 2, 'label')  # 클릭 여부\n",
+    "]\n",
+    "description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_steam['date'] = pd.to_datetime(df_steam['date'])\n",
+    "df_steam['date'] = (df_steam['date'] - pd.Timestamp(\"1970-01-01\")).dt.days\n",
+    "min_date = np.min(df_steam['date'])\n",
+    "max_date = np.max(df_steam['date'])\n",
+    "\n",
+    "df_steam['date'] = df_steam['date'].map(lambda x: (x - min_date) / (max_date - min_date))\n",
+    "df_steam = df_steam.sort_values(by='date')  # 시간순 정렬\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot item counts vs item\n",
+    "user2count = df_steam.groupby(['app_id']).size().reset_index(name='count').sort_values(by='count')\n",
+    "item_ids = list(user2count['app_id'])\n",
+    "counts = np.array(user2count['count'])\n",
+    "plt.plot(np.arange(len(counts)), counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_2(df_ratings, description, N=274, K=10):\n",
+    "    user2count = df_ratings.groupby(['app_id']).size().reset_index(name='count').sort_values(by='count')\n",
+    "    item_ids = user2count['app_id'].to_numpy()\n",
+    "    counts = user2count['count'].to_numpy()\n",
+    "\n",
+    "    hot_item_ids = item_ids[counts > N]\n",
+    "    cold_item_ids = item_ids[(counts <= N) & (counts >= 3 * K)]\n",
+    "\n",
+    "    item_group = df_ratings.groupby('app_id')\n",
+    "\n",
+    "    train_base_list = []\n",
+    "    for item_id in hot_item_ids:\n",
+    "        df_hot = item_group.get_group(item_id).sort_values(by='date')\n",
+    "        train_base_list.append(df_hot)\n",
+    "\n",
+    "    train_base = pd.concat(train_base_list, ignore_index=True)\n",
+    "\n",
+    "    train_warm_a_list, train_warm_b_list, train_warm_c_list, test_list = [], [], [], []\n",
+    "    \n",
+    "    for item_id in cold_item_ids:\n",
+    "        df_cold = item_group.get_group(item_id).sort_values(by='date')\n",
+    "        train_warm_a_list.append(df_cold[:K])\n",
+    "        train_warm_b_list.append(df_cold[K:2*K])\n",
+    "        train_warm_c_list.append(df_cold[2*K:3*K])\n",
+    "        test_list.append(df_cold[3*K:])\n",
+    "    \n",
+    "    train_warm_a = pd.concat(train_warm_a_list, ignore_index=True)\n",
+    "    train_warm_b = pd.concat(train_warm_b_list, ignore_index=True)\n",
+    "    train_warm_c = pd.concat(train_warm_c_list, ignore_index=True)\n",
+    "    test = pd.concat(test_list, ignore_index=True)\n",
+    "\n",
+    "    save_dic = {\n",
+    "        'train_base': train_base.sort_values('date'),\n",
+    "        'train_warm_a': train_warm_a.sort_values('date'),\n",
+    "        'train_warm_b': train_warm_b.sort_values('date'),\n",
+    "        'train_warm_c': train_warm_c.sort_values('date'),\n",
+    "        'test': test.sort_values('date'),\n",
+    "        'description': description\n",
+    "    }\n",
+    "\n",
+    "    for name, df in save_dic.items():\n",
+    "        print(\"{} size: {}\".format(name, len(df)))\n",
+    "\n",
+    "    with open('./emb_warm_split_preprocess.pkl', 'bw+') as f:\n",
+    "        pickle.dump(save_dic, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_2(df_steam, description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get training data for Meta-Embedding method\n",
+    "with open('./emb_warm_split_preprocess.pkl', 'rb') as f:\n",
+    "    data = pickle.load(f)\n",
+    "\n",
+    "df_base = data['train_base']\n",
+    "item2group = df_base.groupby('app_id')\n",
+    "\n",
+    "train_a_list, train_b_list, train_c_list, train_d_list = [], [], [], []\n",
+    "\n",
+    "for item_id, df_group in item2group:\n",
+    "    l, e = df_group.shape[0], df_group.shape[0] // 4     \n",
+    "    train_a_list.append(df_group.iloc[0:e])\n",
+    "    train_b_list.append(df_group.iloc[e: 2 * e])\n",
+    "    train_c_list.append(df_group.iloc[2 * e: 3 * e])\n",
+    "    train_d_list.append(df_group.iloc[3 * e: 4 * e]) \n",
+    "\n",
+    "train_a = pd.concat(train_a_list, ignore_index=True)\n",
+    "train_b = pd.concat(train_b_list, ignore_index=True)\n",
+    "train_c = pd.concat(train_c_list, ignore_index=True)\n",
+    "train_d = pd.concat(train_d_list, ignore_index=True)\n",
+    "\n",
+    "shuffle_idx = np.random.permutation(train_a.shape[0])\n",
+    "train_a = train_a.iloc[shuffle_idx]\n",
+    "train_b = train_b.iloc[shuffle_idx]\n",
+    "train_c = train_c.iloc[shuffle_idx]\n",
+    "train_d = train_d.iloc[shuffle_idx]\n",
+    "\n",
+    "data[\"metaE_a\"] = train_a\n",
+    "data[\"metaE_b\"] = train_b\n",
+    "data[\"metaE_c\"] = train_c\n",
+    "data[\"metaE_d\"] = train_d\n",
+    "\n",
+    "with open('./Steam_data.pkl', 'wb') as f:\n",
+    "    pickle.dump(data, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"데이터 타입:\", type(data))\n",
+    "print(\"데이터 크기:\", len(data) if isinstance(data, dict) else \"Not a dict\")\n",
+    "print(\"데이터 키 목록:\", data.keys() if isinstance(data, dict) else \"Not a dict\")\n"
    ]
   }
  ],
