Refac: Refactor embedding storage and projection layer

--- a/Steam/Steam_embedding.ipynb
+++ b/Steam/Steam_embedding.ipynb
@@ -62,24 +62,22 @@
     "    def __init__(self, output_dim=256):\n",
     "        super().__init__()\n",
     "        self.bert = BertModel.from_pretrained('bert-base-uncased')\n",
-    "        self.projection = nn.Linear(768, output_dim)  # BERT 기본 차원(768) → 사용자 정의 차원\n",
+    "        self.projection = nn.Sequential(\n",
+    "            nn.Linear(768, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, output_dim)\n",
+    "        )\n",
     "        \n",
-    "    def forward(self, input_ids, attention_mask):\n",
-    "        outputs = self.bert(input_ids=input_ids, attention_mask=attention_mask)\n",
-    "        pooled = outputs.last_hidden_state.mean(dim=1)\n",
-    "        return self.projection(pooled)  # 차원 축소 적용\n",
+    "    def forward(self, input_ids, attention_mask, token_type_ids):\n",
+    "        outputs = self.bert(input_ids=input_ids, attention_mask=attention_mask, token_type_ids=token_type_ids)\n",
+    "        pooled = outputs.pooler_output\n",
+    "        return self.projection(pooled)\n",
     "\n",
     "print(\"BERT 모델과 토크나이저를 로드하는 중...\")\n",
     "bert_model = BertWithProjection(output_dim=256).to(device)\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
     "\n",
-    "def get_bert_embedding(text, tokenizer, model, max_length=512):\n",
-    "    inputs = tokenizer(text, return_tensors=\"pt\", padding=True, truncation=True, max_length=max_length).to(device)\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(**inputs)\n",
-    "    return outputs.last_hidden_state.mean(dim=1).squeeze()\n",
-    "\n",
-    "def get_combined_embedding(text, tokenizer, model, max_length=256):\n",
+    "def get_combined_embedding(text, tokenizer, model, max_length=512):\n",
     "    inputs = tokenizer(\n",
     "        text, \n",
     "        return_tensors=\"pt\", \n",
@@ -124,25 +122,23 @@
     "tag_embeddings = tag_embedding_layer(torch.tensor(df['encoded_tags'].values).to(device))\n",
     "category_embeddings = category_embedding_layer(torch.tensor(df['encoded_categories'].values).to(device))\n",
     "\n",
-    "# 최종 임베딩 결합\n",
-    "print(\"최종 임베딩 결합...\")\n",
-    "final_features = np.concatenate([\n",
-    "    np.stack(df['combined_embedding'].values),\n",
-    "    tag_embeddings.detach().cpu().numpy(),\n",
-    "    category_embeddings.detach().cpu().numpy()\n",
-    "], axis=1)\n",
-    "\n",
     "# item_id와 임베딩 매핑 생성\n",
     "print(\"item_id와 임베딩 매핑 생성...\")\n",
     "embeddings_df = pd.DataFrame({\n",
     "    'item_id': df['item_id'].values,\n",
-    "    'embedding': list(final_features)\n",
+    "    'tag_embedding': list(tag_embeddings.detach().cpu().numpy()),\n",
+    "    'category_embedding': list(category_embeddings.detach().cpu().numpy())\n",
     "})\n",
     "\n",
     "print(\"최종 임베딩이 완료되었습니다!\")\n",
-    "print(f\"최종 임베딩 shape: {final_features.shape}\")\n",
+    "print(f\"최종 임베딩 shape: {embeddings_df.shape}\")\n",
     "print(\"\\n결과 예시:\")\n",
-    "print(embeddings_df.head())"
+    "print(embeddings_df.head())\n",
+    "\n",
+    "# 최종 임베딩 저장\n",
+    "print(\"최종 임베딩을 저장하는 중...\")\n",
+    "embeddings_df.to_csv(\"item_embeddings.csv\", index=False)\n",
+    "embeddings_df.to_pickle(\"item_embeddings.pkl\")"
    ]
   }
  ],
