Fix: fix final file

--- a/Steam/Steam_embedding.ipynb
+++ b/Steam/Steam_embedding.ipynb
@@ -11,28 +11,50 @@
      "text": [
       "사용할 장치: cuda\n",
       "데이터를 로드하는 중...\n",
+      "제목과 설명을 하나의 텍스트로 결합하는 중...\n",
       "BERT 모델과 토크나이저를 로드하는 중...\n",
-      "제목과 설명을 BERT로 임베딩하는 중...\n"
+      "설명+제목 텍스트 임베딩 생성 중...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "설명 임베딩: 100%|██████████| 37141/37141 [05:15<00:00, 117.77it/s]\n",
-      "제목 임베딩: 100%|██████████| 37141/37141 [04:35<00:00, 134.86it/s]\n"
+      "설명+제목 임베딩 생성: 100%|██████████| 37141/37141 [05:26<00:00, 113.84it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "태그와 카테고리를 정수 인코딩하는 중...\n",
-      "태그와 카테고리 임베딩 레이어를 초기화하는 중...\n",
-      "태그와 카테고리 임베딩을 계산하는 중...\n",
-      "모든 임베딩을 결합하는 중...\n",
+      "태그와 카테고리를 인코딩하는 중...\n",
+      "Unique category count: 39\n",
+      "Unique tag count: 58\n",
       "최종 임베딩이 완료되었습니다!\n",
-      "최종 임베딩 shape: (37141, 1632)\n"
+      "최종 임베딩 shape: (37141, 4)\n",
+      "\n",
+      "결과 예시:\n",
+      "   item_id                                 combined_embedding  \\\n",
+      "0    13500  [0.07469721, -0.13500327, 0.035524804, 0.08101...   \n",
+      "1   113020  [0.089261964, -0.12509413, -0.031733427, 0.059...   \n",
+      "2   226560  [0.091406524, -0.0791841, -0.011675851, 0.0754...   \n",
+      "3   249050  [0.09316784, -0.12666124, 0.008469397, 0.04809...   \n",
+      "4   250180  [0.0985962, -0.06672039, 0.0010153712, 0.06718...   \n",
+      "\n",
+      "                                       tag_embedding  \\\n",
+      "0  [-0.21169196, -0.32882008, 0.12155646, 0.13996...   \n",
+      "1  [0.09884401, 0.19515513, 0.14258806, 0.5334548...   \n",
+      "2  [0.072806954, -0.14683862, -0.081446454, 0.295...   \n",
+      "3  [-0.17214547, 0.19388251, 0.18594736, 0.429728...   \n",
+      "4  [-0.016936684, 0.51116854, 0.1582142, 0.406104...   \n",
+      "\n",
+      "                                  category_embedding  \n",
+      "0  [0.505604, -0.37481222, 1.1237689, -0.7590028,...  \n",
+      "1  [0.17022808, -0.13183346, 0.02131333, 0.088251...  \n",
+      "2  [0.5420039, -0.04799211, 0.3378833, -0.2547859...  \n",
+      "3  [0.3494526, 0.281984, 0.3194568, 0.50469553, -...  \n",
+      "4  [0.2801227, -0.053142898, 0.008180499, 0.20843...  \n",
+      "최종 임베딩을 저장하는 중...\n"
      ]
     }
    ],
@@ -44,6 +66,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from transformers import BertTokenizer, BertModel\n",
     "from tqdm import tqdm\n",
+    "import itertools\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(f\"사용할 장치: {device}\")\n",
@@ -96,12 +119,22 @@
     "    for text in tqdm(df['combined_text'], desc=\"설명+제목 임베딩 생성\")\n",
     "]\n",
     "\n",
-    "print(\"태그와 카테고리를 정수 인코딩하는 중...\")\n",
-    "tag_encoder = LabelEncoder()\n",
-    "category_encoder = LabelEncoder()\n",
+    "print(\"태그와 카테고리를 인코딩하는 중...\")\n",
+    "# category 처리: 콤마로 분리하여 좌우 공백 제거 후 리스트 생성\n",
+    "df['categories_list'] = df['categories'].fillna('').apply(lambda x: [s.strip() for s in x.split(',')] if x != '' else [])\n",
+    "# 고유 category 목록 생성\n",
+    "unique_categories = sorted(set(itertools.chain.from_iterable(df['categories_list'])))\n",
+    "cat2idx = {cat: i for i, cat in enumerate(unique_categories)}\n",
+    "print(\"Unique category count:\", len(unique_categories))\n",
+    "# 각 row마다 category 인덱스 리스트 생성\n",
+    "df['encoded_categories'] = df['categories_list'].apply(lambda cats: [cat2idx[cat] for cat in cats])\n",
     "\n",
-    "df['encoded_tags'] = tag_encoder.fit_transform(df['tags_sum'])\n",
-    "df['encoded_categories'] = category_encoder.fit_transform(df['categories'])\n",
+    "# tag 처리: tag 정보도 같은 방식으로 변환 (열 이름이 tags_sum라고 가정)\n",
+    "df['tags_list'] = df['tags_sum'].fillna('').apply(lambda x: [s.strip() for s in x.split(',')] if x != '' else [])\n",
+    "unique_tags = sorted(set(itertools.chain.from_iterable(df['tags_list'])))\n",
+    "tag2idx = {tag: i for i, tag in enumerate(unique_tags)}\n",
+    "print(\"Unique tag count:\", len(unique_tags))\n",
+    "df['encoded_tags'] = df['tags_list'].apply(lambda tags: [tag2idx[tag] for tag in tags])\n",
     "\n",
     "class EmbeddingLayer(nn.Module):\n",
     "    def __init__(self, num_embeddings, embedding_dim):\n",
@@ -110,24 +143,27 @@
     "    \n",
     "    def forward(self, x):\n",
     "        return self.embedding(x)\n",
+    "    \n",
+    "# 임베딩 레이어 초기화: 고유 클래스 개수를 이용\n",
+    "tag_embedding_layer = EmbeddingLayer(num_embeddings=len(unique_tags), embedding_dim=64).to(device)\n",
+    "category_embedding_layer = EmbeddingLayer(num_embeddings=len(unique_categories), embedding_dim=32).to(device)\n",
     "\n",
-    "print(\"태그와 카테고리 임베딩 레이어를 초기화하는 중...\")\n",
-    "tag_embedding_layer = EmbeddingLayer(num_embeddings=len(tag_encoder.classes_), embedding_dim=64).to(device)\n",
-    "category_embedding_layer = EmbeddingLayer(num_embeddings=len(category_encoder.classes_), embedding_dim=32).to(device)\n",
-    "print(\"len(tag_encoder.classes_): \", len(tag_encoder.classes_))\n",
-    "print(\"len(category_encoder.classes_): \", len(category_encoder.classes_))\n",
+    "def get_embedding_from_indices(indices, layer):\n",
+    "    if not indices:\n",
+    "        return torch.zeros(layer.embedding.embedding_dim, device=device)\n",
+    "    idx_tensor = torch.tensor(indices, dtype=torch.long, device=device)\n",
+    "    emb = layer(idx_tensor)\n",
+    "    return emb.mean(dim=0)\n",
     "\n",
-    "# 태그와 카테고리 임베딩 계산\n",
-    "print(\"태그와 카테고리 임베딩을 계산하는 중...\")\n",
-    "tag_embeddings = tag_embedding_layer(torch.tensor(df['encoded_tags'].values).to(device))\n",
-    "category_embeddings = category_embedding_layer(torch.tensor(df['encoded_categories'].values).to(device))\n",
+    "df['tag_embedding'] = df['encoded_tags'].apply(lambda inds: get_embedding_from_indices(inds, tag_embedding_layer).cpu().detach().numpy())\n",
+    "df['category_embedding'] = df['encoded_categories'].apply(lambda inds: get_embedding_from_indices(inds, category_embedding_layer).cpu().detach().numpy())\n",
     "\n",
     "# item_id와 임베딩 매핑 생성\n",
-    "print(\"item_id와 임베딩 매핑 생성...\")\n",
     "embeddings_df = pd.DataFrame({\n",
     "    'item_id': df['item_id'].values,\n",
-    "    'tag_embedding': list(tag_embeddings.detach().cpu().numpy()),\n",
-    "    'category_embedding': list(category_embeddings.detach().cpu().numpy())\n",
+    "    'combined_embedding': list(df['combined_embedding']),\n",
+    "    'tag_embedding': list(df['tag_embedding']),\n",
+    "    'category_embedding': list(df['category_embedding'])\n",
     "})\n",
     "\n",
     "print(\"최종 임베딩이 완료되었습니다!\")\n",
@@ -138,7 +174,8 @@
     "# 최종 임베딩 저장\n",
     "print(\"최종 임베딩을 저장하는 중...\")\n",
     "embeddings_df.to_csv(\"item_embeddings.csv\", index=False)\n",
-    "embeddings_df.to_pickle(\"item_embeddings.pkl\")"
+    "embeddings_df.to_pickle(\"item_embeddings.pkl\")\n",
+    "print(\"최종 임베딩이 저장되었습니다!\")"
    ]
   }
  ],
