--- a/datahub/steam/steam_preprocessing.ipynb
+++ b/datahub/steam/steam_preprocessing.ipynb
@@ -1207,6 +1207,7 @@
    "source": [
     "# Preprocess date_release - minmax scaling\n",
     "df_steam['date_release'] = pd.to_datetime(df_steam['date_release'])\n",
+    "df_steam['year'] = df_steam['date_release'].dt.year # 데이터 스플릿을 위한 Year 변수\n",
     "df_steam['date_release'] = (df_steam['date_release'] - pd.Timestamp(\"1970-01-01\")).dt.days\n",
     "min_date = np.min(df_steam['date_release'])\n",
     "max_date = np.max(df_steam['date_release'])\n",
@@ -1698,7 +1699,7 @@
     "\n",
     "# Reorder columns\n",
     "# orders = ['user_id', 'item_id', 'hours', 'date_release', 'positive_ratio', 'price_final', 'price_original', 'peak_ccu', 'required_age', 'price', 'metacritic_score', 'date', 'count', 'combined_embedding', 'tag_embedding', 'category_embedding', 'interaction']\n",
-    "orders = ['user_id', 'item_id', 'hours', 'date_release', 'positive_ratio', 'price_final', 'price_original', 'peak_ccu', 'required_age', 'price', 'metacritic_score', 'date', 'count', 'interaction']\n",
+    "orders = ['user_id', 'item_id', 'hours', 'date_release', 'positive_ratio', 'price_final', 'price_original', 'peak_ccu', 'required_age', 'price', 'metacritic_score', 'date', 'count', 'interaction','year']\n",
     "df_steam = df_steam[orders]\n",
     "description = [\n",
     "    ('user_id', num_user, 'spr'),  # 변환된 유저 ID\n",
@@ -1765,6 +1766,7 @@
     "    \n",
     "    for item_id in cold_item_ids:\n",
     "        df_cold = item_group.get_group(item_id).sort_values(by='date')\n",
+    "        df_cold = df_cold[df_cold['year'] >= 2020]  \n",
     "        train_warm_a_list.append(df_cold[:K])\n",
     "        train_warm_b_list.append(df_cold[K:2*K])\n",
     "        train_warm_c_list.append(df_cold[2*K:3*K])\n",
